<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:gravity="center"
    tools:context=".Login">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:layout_width="240dp"
            android:layout_height="140dp"
            android:src="@mipmap/logo"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/email"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email_hint"
            android:paddingLeft="10dp"
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:layout_height="50dp">
        </EditText>
        <EditText
            android:id="@+id/password"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:layout_height="50dp">
        </EditText>
        <TextView
            android:id="@+id/forgot_passord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_info"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            />
        <LinearLayout
            android:id="@+id/login"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:background="@drawable/login"
            android:text="@string/login_submit"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_submit"
                android:textColor="@color/white"
                android:textSize="24dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/register"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:text="@string/login_submit"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text"
                android:textColor="@color/white"
                android:textSize="24dp"
                />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>