<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:gravity="center"
    tools:context=".Login">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:layout_width="240dp"
                android:layout_height="140dp"
                android:src="@mipmap/logo"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_text"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="20dp"
                />
            <EditText
                android:id="@+id/email"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email_hint"
                android:paddingLeft="15dp"
                android:background="@drawable/border_rounded"
                android:layout_width="match_parent"
                android:layout_height="50dp">
            </EditText>

            <LinearLayout
                android:id="@+id/send"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/login"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-light"
                    android:textSize="26dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>